# supersonic-sunshine

./: .editorconfig  .gitignore  CMakeLists.txt  README.md
assets/: hallway.mtl
gxx_to_ltc_fit/: Makefile  export.h  fitLTC.cpp  plot.h
include/: Camera.h  SupersonicGui.h  arealight.h  ltc.h  ltcMaps.h  mesh.h  shader.h  util.h
shaders/: arealight.inc  cameramatrix.inc  light.frag  lpt.frag  ltc.inc  orennayar.inc  plain.frag  quad.vert  simple.frag  simple.vert  trunk.frag
src/: CMakeLists.txt  Camera.cpp  SupersonicGui.cpp  arealight.cpp  main.cpp  mesh.cpp  shader.cpp  util.cpp
